--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-peer-chat",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "An easy to use react component for impleting peer-to-peer chatting.",
   "main": "./build/index.js",
+  "module": "./build/index.js",
   "scripts": {
     "build": "npm i && tsc"
   },
@@ -32,7 +33,6 @@
     "react-dom": ">=16.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.5.9",
     "@types/react": "^18.2.21"
   },
   "dependencies": {
