--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "ES2022",
+    "target": "ES5",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "declaration": true,
     "noUnusedLocals": true,
     "removeComments": true,
@@ -9,9 +10,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "react",
+    "jsx": "preserve",
     "rootDir": "./src",
-    "outDir": "./build",
-    "moduleResolution": "Node"
+    "outDir": "./build"
   }
 }
