--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-peer-chat",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "An easy to use react component for impleting peer-to-peer chatting.",
   "main": "./build/index.js",
   "module": "./build/index.js",
@@ -33,6 +33,7 @@
     "react-dom": ">=16.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.5.9",
     "@types/react": "^18.2.21"
   },
   "dependencies": {
