--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES5",
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "target": "ES6",
+    "module": "ES2022",
     "declaration": true,
     "noUnusedLocals": true,
     "removeComments": true,
@@ -10,8 +9,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "rootDir": "./src",
-    "outDir": "./build"
+    "outDir": "./build",
+    "moduleResolution": "Node"
   }
 }
