--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "react-peer-chat",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "An easy to use react component for impleting peer-to-peer chatting.",
   "main": "./build/index.js",
+  "type": "module",
   "scripts": {
     "build": "npm i && tsc"
   },
