--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-peer-chat",
-  "version": "0.1.12",
+  "version": "0.2.0",
   "description": "An easy to use react component for impleting peer-to-peer chatting.",
   "main": "./build/index.js",
   "type": "module",
   "scripts": {
-    "build": "npm i && tsc"
+    "copy": "copy .\\src\\*.css build",
+    "build": "npm i && tsc && npm run copy"
   },
   "repository": {
     "type": "git",
