--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "react",
+    "jsx": "react-native",
+    // "jsx": "react",
     "rootDir": "./src",
     "outDir": "./build"
-  }
+  },
+  "assets": ["./src/styles.css"]
 }
