--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "react-native",
-    // "jsx": "react",
+    "jsx": "react",
     "rootDir": "./src",
     "outDir": "./build"
   },
