--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "react-peer-chat",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "An easy to use react component for impleting peer-to-peer chatting.",
-  "main": "./build/index.js",
   "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "copy": "copy .\\src\\*.css build",
-    "build": "npm i && tsc && npm run copy"
+    "copy": "copy .\\src\\*.css dist",
+    "build": "pnpm i && tsc && pnpm copy"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,9 @@
     "url": "https://github.com/SahilAggarwal2004/react-peer-chat/issues"
   },
   "homepage": "https://github.com/SahilAggarwal2004/react-peer-chat#readme",
+  "publishConfig": {
+    "@sahilaggarwal2004:registry": "https://npm.pkg.github.com"
+  },
   "peerDependencies": {
     "react": ">=16.0.0",
     "react-dom": ">=16.0.0"
