--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "strict": true,
     "skipLibCheck": true,
     "jsx": "react",
-    "rootDir": "./src",
-    "outDir": "./build"
+    "rootDir": "src",
+    "outDir": "dist",
+    "noUncheckedIndexedAccess": true
   }
 }
