--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-peer-chat",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "An easy to use react component for impleting peer-to-peer chatting.",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "copy": "copy .\\src\\*.css dist",
-    "build": "npm i && tsc && npm run copy"
+    "build": "pnpm i && tsc && pnpm run copy"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,7 @@
     "react-dom": ">=16.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.28"
+    "@types/react": "^18.2.38"
   },
   "dependencies": {
     "peerjs": "^1.5.1"
