--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES6",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "target": "es6",
+    "module": "esnext",
+    "moduleResolution": "bundler",
     "lib": ["DOM", "ESNext"],
     "jsx": "react",
     "declaration": true,
